converts optional to use lambda

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,2 +1,3 @@
 repositoryaspect.persistenceexception.message=An error occurred while persisting or retrieving items(s).
 itemscontroller.validationexception.pathiddoesnotmatchobject=ID: {0} in path does not match ID {1} in the object provided.
+itemsservice.validationexception.entitynotfoundforid=Item not found for ID {0} 
